IE11 text wrap fix + strange svg line fix

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -29,6 +29,7 @@
     
     .diagonal-bottom-fix {
         margin-top: -1px;
+        width: 100%;
     }
     
     .hem .header-diagonal-bottom p {
@@ -102,7 +103,8 @@
             background-attachment: fixed;
         }
         @media screen and (min-width: 1280px) {
-            background-position: center center;        }
+            background-position: center center;
+        }
     }
     
     #kontakt-bg {
